--- a/Pipfile
+++ b/Pipfile
@@ -6,10 +6,10 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+"web.py" = "==0.61"
 
 [requires]
 python_version = "3.8"
 
 [scripts]
-
-start = "python main.py"
+start = "python main.py 80"
